--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -31,6 +31,9 @@ permissions:
   slimefun.command.teleporter:
     description: Allows you to do /sf teleporter
     default: op
+  slimefun.command.guide:
+    description: Allows you to do /sf guide
+    default: op
   slimefun.command.versions:
     description: Allows you to do /sf versions
     default: op
